--- a/config.toml
+++ b/config.toml
@@ -1,38 +1,42 @@
-title = "Hanh Pham"
-baseURL = "https://example.com"
-theme = "hugo-researcher"
-disableKinds = ["taxonomy", "term"]
-enableEmoji = true
-math = false          # enable KaTeX (https://katex.org/) globally
-googleAnalytics = ""  # add your tracking id
+title = "Hannah Pham"
+baseURL = "https://example.com/"
+theme = "hugo-resume"
+languageCode = "en-us"
+PygmentsCodeFences = true
+PygmentsCodeFencesGuessSyntax = true
+PygmentsStyle = "monokai"
+enableGitInfo = false
 
 [params]
-  author = "Olivier Roques"
-  description = "A simple monospaced resume theme for Hugo."
-  favicon = "favicon.ico"  # path to a .ico to use as favicon
-  [params.footer]
-    text = "By Olivier Roques"
-    url = "https://github.com/ojroques/hugo-researcher"
+address = "Iowa City, IA"
+email = "hanh-pham@uiowa.edu"
+favicon = "/favicon.ico"
+firstName = "Hannah"
+lastName = "Pham"
+profileImage = "img/TechChat.png"
+showEducation = true
+showExperience = true
+showOpenSource = false
+showProjects = true
+showPublications = true
+showQr = true
+showSkills = true
 
-[permalinks]
-  "/" = "/:filename"
+[params.google]
 
-[menu]
-  [[menu.main]]
-    name = "About"
-    url = "/about"
-    weight = 1
-  [[menu.main]]
-    name = "Resume"
-    url = "/resume.pdf"
-    # 'pre' and 'post' hooks are available
-    # here we use an icon from Bootstrap https://icons.getbootstrap.com/
-    pre = '<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7.5 1.5v-2l3 3h-2a1 1 0 0 1-1-1zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 5.755S12 12 8 12s-5 1.755-5 1.755V14a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-.245z"/></svg> '
-    weight = 2
-  [[menu.main]]
-    name = "Contact"
-    url = "/contact"
-    weight = 3
+[params.google.analytics]
+trackerID = "XX-123446-01"
 
-[markup.goldmark.renderer]
-  unsafe = true  # allow raw HTML in markdown files
+[[params.handles]]
+link = "https://www.linkedin.com/in/hanh-pham/"
+name = "LinkedIn"
+
+[[params.handles]]
+link = "https://github.com/eddiewebb/"
+name = "GitHub"
+
+[outputs]
+home = ["HTML", "JSON"]
+
+[taxonomies]
+tag = "tags"
