--- a/config.toml
+++ b/config.toml
@@ -17,10 +17,11 @@ profileImage = "img/TechChat.png"
 showEducation = true
 showExperience = true
 showOpenSource = false
-showProjects = true
-showPublications = true
-showQr = true
+showProjects = false
+showPublications = false
+showQr = false
 showSkills = true
+showPublication = true
 
 [params.google]
 
